src/components/Header.css
.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 10rem;
  z-index: 2;
  background: rgba(0, 0, 0, 0.3);
}

.header-logo {
  padding: 0.1rem 56px;
  position: fixed;
  display: flex;
  justify-content: flex-start;
}

.header-name {
  color: #edf2f4;
  border: 6px solid #edf2f4;
  padding: 0.7em;
  font-size: 2rem;
  animation: show 0.5s;
  text-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
}

.header-container {
  position: relative;
  display: flex;
  justify-content: flex-end;
  margin: 0 auto;
  align-items: center;
  padding: 3.3rem;
  text-align: right;
  color: lightgrey;
  z-index: 2;
  transition: all 0.2s linear;
}

.nav-item {
  position: relative;
  display: inline-block;
  font-size: 2.6rem;
  margin-right: 4rem;
}

.nav-item:after {
  content: "";
  position: absolute;
  width: 100%;
  height: 0.4rem;
  opacity: 0;
  bottom: -1rem;
  left: 0;
  transition: all 0.1s ease-in-out;
  background-color: lightgrey;
}

.nav-item:hover:after {
  opacity: 1;
}

@media (max-width: 1000px) {
  .header {
    height: 6rem;
  }

  .header-container {
    padding: 2rem;
    align-items: center;
  }
}

@media (max-width: 600px) {
  .header {
    height: 6rem;
  }

  .header-logo {
    display: none;
  }

  .header-container {
    align-items: center;
  }

  .nav-item {
    font-size: 1.2rem;
    margin-right:3rem;
  }
}

.progress-bar {
  position: fixed;
  top: 10rem;
  left: 0;
  height: 4px;
  background-color: white;
  width: 0;
  transition: width 0.3s ease-in-out;
  bottom: 0;
}

@media (max-width: 600px) {
  .header {
    height: 6rem;
  }

  .header-logo {
    display: none;
  }

  .header-container {
    align-items: center;
  }

  .nav-item {
    font-size: 1.2rem;
    margin-right: 3rem;
  }
  
  .progress-bar {
    position: fixed;
    top: 6rem;
    left: 0;
    height: 4px;
    background-color: white;
    width: 0;
    transition: width 0.3s ease-in-out;
    bottom: 0;
  }
}

